cmake_minimum_required(VERSION 3.26)
set(CMAKE_CXX_STANDARD 20)

project(AddTwoNum)
add_executable(AddTwoNum ChapterOne/Section2/AddTwoNum/AddTowNum.cpp)

project(HelloWorld)
add_executable(HelloWorld ChapterOne/Section2/HelloWorld/HelloWorld.cpp)

project(MultiplyTwoNum)
add_executable(MultiplyTwoNum ChapterOne/Section2/MultiplyTwoNum/MultiplyTwoNum.cpp)

project(SumOfOneToTen)
add_executable(SumOfOneToTen ChapterOne/Section4/SumOfOneToTen/SumOfOneToTen.cpp)

project(AddNums)
add_executable(AddNums ChapterOne/Section4/AddNums/AddNums.cpp)
